objects/ssot__CustodyItemRegulatoryCodeViolation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CustodyItemId__c</fullName>
        <label>Custody Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemRgltyCodeVioStatus__c</fullName>
        <label>Custody Item Rglty Code Vio Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Custody Item Regulatory Code Vio Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeViolationId__c</fullName>
        <label>Regulatory Code Violation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658759311_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItemRegulatoryCodeViolation_C_rel</label>
        <referenceTo>ssot__CustodyItem__dlm</referenceTo>
        <relationshipLabel>CustodyItemRegulatoryCodeViolation_C_rel</relationshipLabel>
        <relationshipName>rel_1731658759311_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659291318_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItemRegulatoryCodeViolation_R_rel</label>
        <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
        <relationshipLabel>CustodyItemRegulatoryCodeViolation_R_rel</relationshipLabel>
        <relationshipName>rel_1731659291318_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>